[package]
name = "mathemascii"
version = "0.1.0"
edition = "2021"
authors = ["Nadir Fejzic <nadirfejzo@gmail.com>"]
description = "AsciiMath parser written in Rust."
repository = "https://github.com/nfejzic/mathemascii"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alemat = "0.6.1"

[dev-dependencies]
insta = "1.34.0"
divan = "0.1.2"
xmlem = "0.2.3"

[[bench]]
name = "mod"
harness = false
